<resources>
    <string name="app_name">LyH</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aduanas_txt">Aduanas</string>
    <string name="welcome">Bienvenido</string>
    <string name="aduanas_text">Ofrecemos amplia gama de servicios para asesorar a importadores, exportadores y otros entes de la cadena logística</string>
    <string name="aduana_long_text">Defensa frente a ajustes de impuestos y multas Peticiones a la Dirección General de Aduana Asesoría en procedimientos de verificación de origen Asesoría en procedimientos de verificación de valor Devoluciones por pago indebido de impuestos Solicitud de resoluciones anticipadas</string>
    <string name="aduanas_title">ADUANAS</string>
    <string name="capacitaciones_title">CAPACITACIONES</string>
    <string name="capacitaciones_text">Brindamos servicios de formación en las temáticas de facilitación del comercio, compras públicas y otros</string>
    <string name="capacitaciones_long_text">Conferencias en compras públicas y aduanas Seminario en compras públicas y aduanas Diplomado en compras públicas y aduanas Capacitación en administración pública</string>
    <string name="compras_title">COMPRAS PÚBLICAS</string>
    <string name="compras_text">Ofrecemos servicios de asesoramiento a ofertantes, contratistas e instituciones de la administración pública</string>
    <string name="compras_long_text">Defensa frente imposición de multas e inhabilitaciones Asesoría a ONG´s que ejecutan fondos públicos Asesoría frente a no adjudicaciones, asesoría para defensa de adjudicaciones Elaboración de bases de licitación Términos de referencia, análisis de bases de licitación y asesoría en la elaboración de ofertas Acompañamiento a revisión de expedientes de contratación</string>
    <string name="consultoria_text">Desarrollamos estudios y diagnósticos en nuestras áreas de especialidad</string>
    <string name="consultoria_long_text">Facilitación del comercio Recaudación tributaria en aduanas Elaboración y actualización de manuales administrativos</string>
    <string name="consultoria_title">CONSULTORÍAS</string>
    <string name="asesoria_title">ASESORÍA PERMANENTE</string>
    <string name="asesoria_text">Ofrecemos servicios de acompañamiento permanente a las empresas</string>
    <string name="asesoria_long_text">Compras públicas Aduanas</string>
    <string name="judicial_title">PROCESOS JUDICIALES</string>
    <string name="judicial_text">Representamos los intereses de nuestros clientes ante los tribunales de la república</string>
    <string name="judicial_long_text">Tribunales contencioso administrativo Sala de lo constitucional</string>
    <string name="home_bar">Nuestros Servicios</string>
    <string name="radio_aduana">Aduanas</string>
    <string name="radio_compras">Compras públicas</string>
    <string name="radio_ambas">Ambas</string>
    <string name="suscribirse_text">Como una empresa de asesoría nos interesa que nuestros clientes se mantengan al tanto sobre los temas de interés respectivos a sus rubros</string>
    <string name="correo_hint">Correo electrónico</string>
    <string name="nombre_hint">Nombre</string>
    <string name="rubro_text">Rubro:</string>
    <string name="suscribirse_btn">SUSCRIBIRSE</string>
    <string name="suscribirse_title">¿Por qué suscribirse?</string>
    <string name="suscribirse_caps">Suscribirse</string>
    <string name="contact_title">¿Busca una solución?</string>
    <string name="empresa_text">Empresa/Institución</string>
    <string name="pais_text">País</string>
    <string name="mensaje_text">Mensaje</string>
    <string name="telefono_text">Teléfono</string>
    <string name="enviar_btn_text">Enviar</string>
    <string name="contactenos_caps">Contáctenos</string>
    <string name="inicio_caps">Inicio</string>
    <string name="documento_title">Selecciona un documento</string>
    <string name="documentos_caps">Documentación</string>
    <string name="webinar_title">Selecciona un webinar</string>
    <string name="webinars_caps">Webinars</string>
    <string name="evaluacion_title">Seleccione evaluación</string>
    <string name="evaluacion_caps">Evalúenos</string>
    <string name="about2">En junio de 2010, decidimos emprender nuestra empresa y poner al servicio de nuestro país, los conocimientos adquiridos a lo largo de nuestra trayectoria, con el objetivo de contribuir al crecimiento de El Salvador, tanto con las asesorías que brindamos como con los puestos de trabajo directos e indirectos que generamos</string>
    <string name="about3"><![CDATA[López & Henríquez Abogados y Consultores es una compañía de profesionales con amplia experiencia dentro del Sector Público y Privado, en las áreas de: Facilitación del Comercio, Compras Públicas y Administración Públicas. Brindamos asesoramiento en éstas áreas específicas, adecuándonos a las necesidades de cada cliente]]></string>
    <string name="about1">Somos un matrimonio de profesionales que cuentan con más de 25 años de experiencia entre la Administración Publica y el Sector Privado</string>
    <string name="historia_title">Nuestra historia</string>
    <string name="cofundador_text">Cofundador</string>
    <string name="cofundadora_text">Cofundadora</string>
    <string name="jefa_text">Mónica Henríquez</string>
    <string name="jefe_text">Enrique López</string>
    <string name="socios_title">Nuestros ejecutivos</string>
    <string name="about_caps">Sobre nosotros</string>
    <string name="consultorias_home">Consultorías</string>
    <string name="judiciales_home">Procesos judiciales</string>
    <string name="asesoria_home">Asesoría permanente</string>
    <string name="capacitaciones_home">Capacitaciones</string>
    <string name="compras_home">Compras públicas</string>
    <string name="about_bar">Sobre Nosotros</string>
    <string name="suscribirse_bar">Suscribirse</string>
    <string name="webinar_bar">Webinars</string>
    <string name="evaluenos_bar">Evalúenos</string>
    <string name="documentos_bar">Documentación</string>
    <string name="contact_bar">Contáctenos</string>

</resources>